--- a/_posts/2017-11-02-yes-event.md
+++ b/_posts/2017-11-02-yes-event.md
@@ -10,8 +10,8 @@ title: YES Event
 #### Come along to the YES Event to find out what support is available to help you move towards employment. And get inspired by the young people on the project with the YES Young Person of the Year Awards.
 
 ### When and where is it?
-Friday 8 December
-2pm - 5pm
+Friday 8 December <br>
+2pm - 5pm<br>
 Leicester Adult Education College, 50-54 Belvoir Street, Leicester LE1 6QL
 
 ### What's happening:
