--- a/_posts/2017-11-02-yes-event.md
+++ b/_posts/2017-11-02-yes-event.md
@@ -12,7 +12,8 @@ title: YES Event
 ### When and where is it?
 - Friday 8 December 
 - 2pm - 5pm
-- Leicester Adult Education College, 50-54 Belvoir Street, Leicester LE1 6QL
+- Leicester Adult Education College
+  50-54 Belvoir Street, Leicester LE1 6QL
 
 ### What's happening:
 - Enter the prize draw to **WIN an Amazon Fire 8 HD Tablet** and many more prizes
