--- a/_posts/2017-11-02-yes-event.md
+++ b/_posts/2017-11-02-yes-event.md
@@ -24,7 +24,7 @@ Leicester Adult Education College
 
 **[Book your place now](http://bit.ly/2h5fIN9), so we can make sure we order enough pizza!**
 
-**[Join the event on Facebook]**(http://bit.ly/2iSdyRb)to keep up to date with the latest event news
+Join the event on [Facebook](http://bit.ly/2iSdyRb) to keep up to date with the latest event news
 
 Text us 07989 717 981 or email [info@yesproject.org](info@yesproject.org)
 
