--- a/_posts/2017-11-02-yes-event.md
+++ b/_posts/2017-11-02-yes-event.md
@@ -28,4 +28,4 @@ Join the event on [Facebook](http://bit.ly/2iSdyRb) to keep up to date with the 
 
 Text us 07989 717 981 or email [info@yesproject.org](info@yesproject.org)
 
-Share this event with any friends that you think would benefit from the support provide by the Youth Employability Support (YES) Project.
+Share this event with any friends that you think would benefit from the support provided by the Youth Employability Support (YES) Project.
